# sipXiso

./: Makefile.in  configure.ac  iso.mak.in
src/: boot.msg  ks.m4  splash.lss
